Fix content stretching and flashing problem when opening mobile menu.

--- a/docroot/sites/all/themes/custom/virginsport/src/scss-overrides/_vs-header.scss
+++ b/docroot/sites/all/themes/custom/virginsport/src/scss-overrides/_vs-header.scss
@@ -40,4 +40,5 @@
 
 .vs-menu-open {
   position: fixed;
+  width: 100%;
 }
